--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     
 <body>
     <title>Clock!</title>
-        <div id="timer" class = "container" class="digits">
+        <div class="btn">Start</div>
+        <div class = "container" class="digits">
             
         </div>
 </body>
