--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     
 <body>
     <title>Clock!</title>
-        <div class="btn">Start</div>
-        <div class = "container" class="digits">
-            
+        <div class = "container">
+            <div class="btn">Start</div>
+            <div class="digits"></div>
         </div>
 </body>
 </html>
