--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 <body>
     <title>Clock!</title>
-        <div class = "container">
+        <div class = "wrapper">
             <div class="btn">Start</div>
             <div class="digits"></div>
         </div>
