--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     
 <body>
-    <title>Clock!</title>
+    <title>Best Workflow</title>
         <div class = "wrapper">
         <div class="btn">Start</div>
         <div class="digits"></div>
