updates to js reset button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <title>Best Workflow</title>
         <div class = "wrapper">
-        <div class="btn">Start</div>
+        <div class="btn start">Start</div>
         <div class="digits"></div>
         </div>
 </body>
