start/ reset buttons work now

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Best Workflow</title>
         <div class = "wrapper">
         <div class="btn start">Start</div>
-        <div class="digits"></div>
+        <div class="digits">3 : 00 : 00</div>
         </div>
 </body>
 </html>
