Recess time tracker added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class = "wrapper">
         <div class="btn">Start</div>
         <div class="digits">3 : 00 : 00</div>
+        <div class="recessDigits"></div>
         </div>
 </body>
 </html>
