--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="css/skeleton.css">
+        <link rel="stylesheet" type="text/css" href="css/normalize.css">
         <script src="https://www.google.com/jsapi"></script>
 		<script> google.load('jquery', '1.3.1'); </script>
         <script language="javascript" type="text/javascript" src="clockscript.js"></script>
@@ -12,7 +14,7 @@
 <body>
     <title>Best Workflow</title>
         <div class = "wrapper">
-        <div class="btn">Start</div>
+        <div class="button button-primary">Start</div>
         <div class="digits">3 : 00 : 00</div>
         <div class="recessDigits"></div>
         </div>
