--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
     <head>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-        <link rel="stylesheet" type="text/css" href="css/skeleton.css">
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="css/skeleton.css">
         <script src="https://www.google.com/jsapi"></script>
 		<script> google.load('jquery', '1.3.1'); </script>
         <script language="javascript" type="text/javascript" src="clockscript.js"></script>
@@ -13,10 +12,16 @@
     
 <body>
     <title>Best Workflow</title>
-        <div class = "wrapper">
-        <div class="button button-primary">Start</div>
-        <div class="digits">3 : 00 : 00</div>
-        <div class="recessDigits"></div>
+        <div class = "container">
+            <div class="row">
+                <div class="button button-primary">Start</div>
+            </div>
+            <div class="row">
+                <h1 class="digits">3 : 00 : 00</h1>
+            </div>
+            <div class="row">
+                <h3 class="recessDigits"></h3>
+            </div>
         </div>
 </body>
 </html>
