--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/skeleton.css">
         <script src="https://www.google.com/jsapi"></script>
@@ -14,13 +13,12 @@
     <title>Best Workflow</title>
         <div class = "container">
             <div class="row">
-                <div class="button button-primary">Start</div>
+                <div class="button">START WORKING FOR 3 HOURS</div>
             </div>
             <div class="row">
-                <h1 class="digits">3 : 00 : 00</h1>
+                <p class="digits">3h 00m</p>
             </div>
-            <div class="row">
-                <h3 class="recessDigits"></h3>
+            <div class="progbar">
             </div>
         </div>
 </body>
