--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <title>Best Workflow</title>
         <div class = "container">
             <div class="row">
-                <div class="button button-primary">Start</div>
+                <div class="button">Start</div>
             </div>
             <div class="row">
-                <h1 class="digits">3 : 00 : 00</h1>
+                <h1 class="digits">3 h 00 m 00</h1>
             </div>
             <div class="row">
                 <h3 class="recessDigits"></h3>
