consolidated start and timer

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
     <title>Best Workflow</title>
         <div class = "container">
             <div class="row">
-                <div class="button">START WORKING FOR 3 HOURS</div>
-            </div>
-            <div class="row">
-                <p class="digits">3h 00m</p>
+                <div class="button digits">START WORKING FOR 3 HOURS</div>
             </div>
             <div class="progbar">
             </div>
