fixed button - time spacing issue

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Best Workflow</title>
         <div class = "container">
             <div class="row">
-                <div class="offset-by-four button time digits four columns">START WORKING FOR 3 HOURS</div>
+                <div class="offset-by-four button digits four columns">START WORKING FOR 3 HOURS</div>
                 <div class="four columns">
                     <div class="reset">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
