progress bar html tag

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                         </svg>
                     </div>
                 </div>
-
             </div>
+            <progress></progress>
             <div class="progbar"></div>
         </div>
 </body>
