added max value for progress bar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
             </div>
-            <progress></progress>
+            <progress id="progressbar" max="10800"></progress>
             <div class="progbar"></div>
         </div>
 </body>
