switched to div method for progress bar/value

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     </div>
                 </div>
             </div>
-            <progress id="progressbar" max="10800"></progress>
-            <div class="progbar"></div>
+            <div class="progressvalue"></div>
+            <div class="progressbar"></div>
         </div>
 </body>
 </html>
