--- a/index.html
+++ b/index.html
@@ -23,8 +23,17 @@
                     </div>
                 </div>
             </div>
-            <div class="progressvalue"></div>
-            <div class="progressbar"></div>
+            <div class="progresscontainer">
+                <div class="progressvalue"></div>
+            </div>
+            <div class="progressbar">
+                <div class="workbar work1"></div>
+                <div class="breakbar"></div>
+                <div class="workbar work2"></div>
+                <div class="breakbar"></div>
+                <div class="workbar work3"></div>
+                <div class="breakbar"></div>
+            </div>
         </div>
 </body>
 </html>
