--- a/index.html
+++ b/index.html
@@ -24,16 +24,23 @@
                 </div>
             </div>
             <div class="progresscontainer">
-                <div class="progressvalue"></div>
+                    <div class="workbar work1"></div>
+                    <div class="breakbar"></div>
+                    <div class="workbar work2"></div>
+                    <div class="breakbar"></div>
+                    <div class="workbar work3"></div>
+                    <div class="breakbar"></div>
+                    <div class="progressvalue"></div>
+                <div class="breakexplain">
+                    <div class="workline work1"></div>
+                    <div class="breakline"></div>
+                    <div class="workline work2"></div>
+                    <div class="breakline"></div>
+                    <div class="workline work3"></div>
+                    <div class="breakline"></div>
+                </div>
             </div>
-            <div class="progressbar">
-                <div class="workbar work1"></div>
-                <div class="breakbar"></div>
-                <div class="workbar work2"></div>
-                <div class="breakbar"></div>
-                <div class="workbar work3"></div>
-                <div class="breakbar"></div>
-            </div>
+            
         </div>
 </body>
 </html>
