--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <div class="workbar work3"></div>
                     <div class="breakbar"></div>
                     <div class="progressvalue"></div>
+                    <div class="shield"></div>
                 <div class="breakexplain">
                     <div class="workline work1"></div>
                     <div class="breakline"></div>
