Start/Reset animates now
I also reduced the html. We can mention the alarm in the paragraph
description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <title>Best Workflow</title>
         <div class = "container">
             <div class="row">
-                <div class="offset-by-three button digits six columns">START WORKING FOR 3 HOURS</div>
+                <div class="offset-by-three button digits six columns"><span>START WORKING FOR 3 HOURS</span></div>
                 <div class="offset-by-two one column">
                     <div class="reset">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -55,7 +55,7 @@
                     <!--This is where the text comes in-->
                     <div class="work gap session1"></div>
                     <div class="break gap active">10</div>
-                    <div class="work gap session2 active" style="text-align: left;">minute breaks are assigned and an alarm will alert you</div>
+                    <div class="work gap session2 active" style="text-align: left;">minute breaks</div>
                     <div class="break gap"></div>
                     <div class="work gap session3"></div>
                     <div class="break gap"></div>
