--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="css/skeleton.css">
         <script src="https://www.google.com/jsapi"></script>
 		<script> google.load('jquery', '1.3.1'); </script>
+        <script type="text/javascript" src="jquery.animate-colors-min.js"></script>
         <script language="javascript" type="text/javascript" src="clockscript.js"></script>
     </head>
     
