Added paragraph copy
The text is not that easy to ready. What do you think would be the best
way to improve the legibility ?

Disclaimer: I added that disclaimer because of a 1984-like dream I had
the other night. It doesn't need to make the final cut.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
         <div class="description">
             <div class = "container">
                 <div class="row" style="color: #263238">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam mauris ligula, molestie sit amet urna nec, tristique blandit erat. Mauris venenatis mi lectus. Nunc rutrum arcu massa, non laoreet nibh tempor ac. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi eget orci turpis. Integer luctus sodales blandit. Praesent blandit, turpis maximus egestas laoreet, nulla lorem fringilla magna, ac mattis nulla lorem nec augue.
+                    <p>
+                    Here is a stopwatch, programmed to help get you through intensive work. When you hit the start button, block out all distractions, and apply yourself to whatever it is you want to achieve within 3 hours. There are three work periods, split into 70, 50, and 30 minutes. We allocated them as such to make you feel like you are going down a slide. By starting heavy and easing out, time feels like it is speeding up, and that rush makes staying focussed easier. Between work periods, 10 minute breaks provide a gap to reenergize and refresh. An alarm will ring when one starts, and again when one ends. We hope you have a productive session. 
+                    </p>
+                    <p>
+                    Disclaimer: However, if you don't, remember that the joys of life are not accrued through work alone. Spend time with your family and friends, and have fun; it fills life with meaning.
+                    </p>
                 </div>
             </div>
         </div>
