Added meta tags for SEO + active github link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="Productivity stopwatch">
+        <meta name="keywords" content="productivity, productive, work, flow, watch, timer, three, hours, 3">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/skeleton.css">
@@ -82,7 +85,7 @@
             <div class = "container">
                 <div class="row">
                     <div class="four columns">A Self-taught project</div>
-                    <div class="four columns">Github link</div>
+                    <div class="four columns"><a href="https://github.com/samisayegh/StopClock">See on Github</a></div>
                     <div class="four columns">Developed in Montreal</div>
                 </div>
             </div>
