Github link opens in new tab

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             <div class = "container">
                 <div class="row" style="color: #263238">
                     <p>
-                    Here is a stopwatch, programmed to help get you through intensive work. When you hit the start button, block out all distractions, and apply yourself to whatever it is you want to achieve within 3 hours. There are three work periods, split into 70, 50, and 30 minutes. We allocated them as such to make you feel like you are going down a slide. By starting heavy and easing out, time feels like it is speeding up, and that rush makes staying focussed easier. Between work periods, 10 minute breaks provide a gap to reenergize and refresh. An alarm will ring when one starts, and again when one ends. We hope you have a productive session. 
+                    Here is a watch, programmed to help get through intensive work. When you hit the start button, block out all distractions and apply yourself to whatever it is you want to achieve within 3 hours. There are three work periods, split into 70, 50, and 30 minutes. We allocated them like this to make it feel like you are going down a slide. By starting heavy and easing out, time feels like it is speeding up, and that rush makes staying focussed easier. Between work periods, 10 minute breaks allow time to re-energize and refresh. An alarm will ring when one starts, and when one ends. Have a productive session!
                     </p>
                     <p>
-                    Disclaimer: However, if you don't, remember that the joys of life are not accrued through work alone. Spend time with your family and friends, and have fun; it fills life with meaning.
+                    Disclaimer: However, if you don't, remember that the joys of life are not accrued through work alone. Spending time with family and friends, and having fun, give life its meaning.
                     </p>
                 </div>
             </div>
@@ -85,7 +85,7 @@
             <div class = "container">
                 <div class="row">
                     <div class="four columns">A Self-taught project</div>
-                    <div class="four columns"><a href="https://github.com/samisayegh/StopClock">See on Github</a></div>
+                    <div class="four columns"><a href="https://github.com/samisayegh/StopClock" target="_blank">See on Github</a></div>
                     <div class="four columns">Developed in Montreal</div>
                 </div>
             </div>
