--- a/index.html
+++ b/index.html
@@ -11,10 +11,28 @@
 		<script> google.load('jquery', '1.3.1'); </script>
         <script type="text/javascript" src="jquery.animate-colors-min.js"></script>
         <script language="javascript" type="text/javascript" src="clockscript.js"></script>
+        <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="favicons/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="favicons/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="favicons/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="favicons/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon-180x180.png">
+<link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="favicons/favicon-194x194.png" sizes="194x194">
+<link rel="icon" type="image/png" href="favicons/favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="favicons/android-chrome-192x192.png" sizes="192x192">
+<link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16">
+<link rel="manifest" href="favicons/android-chrome-manifest.json">
+<meta name="msapplication-TileColor" content="#00aba9">
+<meta name="msapplication-TileImage" content="/mstile-144x144.png">
+<meta name="theme-color" content="#ffffff">
     </head>
     
     <body>
-        <title>Best Workflow</title>
+        <title>Work 3 Hours</title>
         <div class = "container">
             <div class="row">
                 <div class="offset-by-three button digits six columns"><span>START WORKING FOR 3 HOURS</span></div>
@@ -61,7 +79,7 @@
                     <div class="break gap active">10</div>
                     <div class="work gap session2 active" style="text-align: left;">minute breaks</div>
                     <div class="break gap"></div>
-                    <div class="work gap session3"></div>
+                    <div class=x"work gap session3"></div>
                     <div class="break gap"></div>
                 </div>
             </div>
@@ -71,23 +89,34 @@
     <footer>
         <div class="description">
             <div class = "container">
-                <div class="row" style="color: #263238">
-                    <p>
-                    Here is a watch, programmed to help get through intensive work. When you hit the start button, block out all distractions and apply yourself to whatever it is you want to achieve within 3 hours. There are three work periods, split into 70, 50, and 30 minutes. We allocated them like this to make it feel like you are going down a slide. By starting heavy and easing out, time feels like it is speeding up, and that rush makes staying focussed easier. Between work periods, 10 minute breaks allow time to re-energize and refresh. An alarm will ring when one starts, and when one ends. Have a productive session!
-                    </p>
-                    <p>
-                    Disclaimer: However, if you don't, remember that the joys of life are not accrued through work alone. Spending time with family and friends, and having fun, give life its meaning.
-                    </p>
-                </div>
+                <table>
+                <tr>
+                    <td>Work for 3 hours split into 70, 50, and 30 minutes with 10 minute breaks in between.</td>
+                </tr>
+                </table>
             </div>
         </div>
         <div class="linkies">
             <div class = "container">
-                <div class="row">
-                    <div class="four columns">A Self-taught project</div>
-                    <div class="four columns"><a href="https://github.com/samisayegh/StopClock" target="_blank">See on Github</a></div>
-                    <div class="four columns">Developed in Montreal</div>
-                </div>
+                <table>
+                    <tr>
+                    <td>
+                        A Self-taught project
+                    </td>
+                    <td>
+                    <a href="https://github.com/samisayegh/StopClock" target="_blank">
+                        <svg width="30px" height="30px" viewBox="0 0 33 33" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+                            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+                                <path d="M16.608,0.455 C7.614,0.455 0.32,7.748 0.32,16.745 C0.32,23.942 4.987,30.047 11.46,32.201 C12.275,32.351 12.572,31.848 12.572,31.416 C12.572,31.029 12.558,30.005 12.55,28.646 C8.019,29.63 7.063,26.462 7.063,26.462 C6.322,24.58 5.254,24.079 5.254,24.079 C3.775,23.069 5.366,23.089 5.366,23.089 C7.001,23.204 7.861,24.768 7.861,24.768 C9.314,27.257 11.674,26.538 12.602,26.121 C12.75,25.069 13.171,24.351 13.636,23.944 C10.019,23.533 6.216,22.135 6.216,15.893 C6.216,14.115 6.851,12.66 7.893,11.522 C7.725,11.11 7.166,9.453 8.053,7.211 C8.053,7.211 9.42,6.773 12.532,8.881 C13.831,8.519 15.225,8.339 16.61,8.332 C17.994,8.339 19.387,8.519 20.688,8.881 C23.798,6.773 25.163,7.211 25.163,7.211 C26.052,9.453 25.493,11.11 25.326,11.522 C26.37,12.66 27,14.115 27,15.893 C27,22.151 23.191,23.528 19.563,23.931 C20.147,24.434 20.668,25.428 20.668,26.947 C20.668,29.125 20.648,30.882 20.648,31.416 C20.648,31.852 20.942,32.359 21.768,32.2 C28.236,30.041 32.899,23.94 32.899,16.745 C32.899,7.748 25.605,0.455 16.608,0.455" id="github-mark" fill="#FFFFFF" sketch:type="MSShapeGroup"></path>
+                            </g>
+                        </svg>
+                    </a>
+                    </td>
+                    <td>
+                        Developed in Montreal
+                    </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </footer>
