Added Facebook meta tags for descriptiob

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Productivity stopwatch">
+        <meta property="og:title" content="Work 3 Hours">
+        <meta property="og:site_name" content="Work 3 Hours">
+        <meta property="og:url" content="http://work3hours.com/">
+        <meta property="og:description" content="Work for 3 hours split into 70, 50, and 30 minutes with 10 minute breaks in between.">
+        <meta property="fb:app_id" content="">
+        <meta property="og:type" content="website">
         <meta name="keywords" content="productivity, productive, work, flow, watch, timer, three, hours, 3">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
