--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta property="og:description" content="Work for 3 hours split into 70, 50, and 30 minutes with 10 minute breaks in between.">
         <meta property="fb:app_id" content="">
         <meta property="og:type" content="website">
+        <meta property="og:image" content="images/work3-fbimg-01.jpg">
         <meta name="keywords" content="productivity, productive, work, flow, watch, timer, three, hours, 3">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
