--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <meta property="og:site_name" content="Work 3 Hours">
         <meta property="og:url" content="http://work3hours.com/">
         <meta property="og:description" content="Work for 3 hours split into 70, 50, and 30 minutes with 10 minute breaks in between.">
-        <meta property="fb:app_id" content="">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="images/work3-fbimg-01.jpg">
+        <meta property="og:image" content="http://work3hours.com/images/work3-fbimg-01.jpg">
         <meta name="keywords" content="productivity, productive, work, flow, watch, timer, three, hours, 3">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/skeleton.css">
+        <link type="text/plain" rel="author" href="http://work3hours.com/humans.txt" />
         <script src="https://www.google.com/jsapi"></script>
 		<script> google.load('jquery', '1.3.1'); </script>
         <script type="text/javascript" src="jquery.animate-colors-min.js"></script>
@@ -109,6 +109,9 @@
                     <tr>
                     <td>
                         A Self-taught project
+                    </td>
+                    <td>
+                        <a href="http://work3hours.com/humans.txt"><img src="http://humanstxt.org/img/oficial-logos/humanstxt-transparent-1ink.png"></a>
                     </td>
                     <td>
                     <a href="https://github.com/samisayegh/StopClock" target="_blank">
