--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<script> google.load('jquery', '1.3.1'); </script>
         <script type="text/javascript" src="jquery.animate-colors-min.js"></script>
         <script language="javascript" type="text/javascript" src="clockscript.js"></script>
+        <link rel="shortcut icon" href="http://work3hours.com/favicons/favicon.ico" />
         <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="favicons/apple-touch-icon-72x72.png">
